2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Make GStreamer the default backend.

	* libmuine/player-gst.c:

	Use a GTimer for time reporting rather than GStreamer, and
	escape path string before passing it to gst.
	
	* libmuine/player-xine.c:

	Small cleanup.
	
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Do the actual song loading in an idle. This makes the whole UI
	feel a lot more responsive.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/PlaylistWindow.cs:

	Allow plugins to pack widgets into the playlistwindow's main
	vbox. 

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.2.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/Item.cs:
	* src/Song.cs:

	Make Deregister an abstract method of Item.
	
	* src/Album.cs:

	Implement Deregister.
	
	* src/SongDatabase.cs:

	Call Album.Deregister from the main loop. Fixes rare crash with
	album removals and UI activity at the same time.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	When syncing a song, make sure the call to StartRemoveFromAlbum
	refers to the old album instead of the new.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (metadata_free), (metadata_get_album_art):

	Ref album art in get_album_art () and unref in metadata_free ()
	
	* src/Metadata.cs:

	Cache album art pixbuf.

	This fixes the g_object_unref warnings and crashes. Yay.

2005-02-07  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/metadata.c: (get_mp3_picture_data),
	(get_mp3_comment_value):

	Plug two leaks.

2005-02-06  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/db.c: (db_pack_pixbuf):
	* libmuine/egg/Makefile.am:
	R libmuine/egg/eggintl.h:
	R libmuine/egg/eggmarshalers.c:
	R libmuine/egg/eggmarshalers.h:
	R libmuine/egg/eggmarshalers.list:
	* libmuine/egg/eggtrayicon.c:
	R libmuine/egg/eggtraymanager.c:
	R libmuine/egg/eggtraymaneger.h: